currently hovered row in table now gets highlighted, fixed z-index issues

--- a/src/app/components/add-edit-booking-dialog/add-edit-booking-dialog.component.css
+++ b/src/app/components/add-edit-booking-dialog/add-edit-booking-dialog.component.css
@@ -1,4 +1,5 @@
 #bookings-dialog{
+    z-index: 2;
     background-color: antiquewhite;
     border-radius: 20px;
     border-color: rgb(220, 195, 162);
