--- a/src/app/components/app-component/app.component.css
+++ b/src/app/components/app-component/app.component.css
@@ -7,6 +7,7 @@ body{
 }
 
 #header{
+    z-index: 5;
     display: flex;
     background-color: rgb(234, 212, 182);
     position: fixed;
